@@ -275,6 +275,15 @@ proc compat-execute { src1 sid use_alt } {
     set extra_flags_3 [compat-get-options $src3]
     set compile_xfail_3 $compiler_conditional_xfail_data
 
+    # On the SPU, most of the compat test cases exceed local store size.
+    # Use automatic overlay support to make them fit.
+    if { [istarget spu-*-elf*] } {
+	set extra_flags_1 "$extra_flags_1 -Wl,--auto-overlay"
+	set extra_flags_1 "$extra_flags_1 -ffunction-sections"
+	set extra_flags_2 "$extra_flags_2 -ffunction-sections"
+	set extra_flags_3 "$extra_flags_3 -ffunction-sections"
+    }
+
     # Define the names of the object files.
     regsub "sid" "sid_main_tst.o" $sid obj1
     regsub "sid" "sid_x_tst.o" $sid obj2_tst
